# SimpleForum

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp
src/Services/: UserService.cpp  UserService.h
src/routes/: HomeRoute.h  LoginRoute.h  LogoutRoute.h  RegisterRoute.h
src/services/: UserService.h
src/sql/: DataBase.cpp  DataBase.h
src/templates/: fancypage.html  home.html  login.html  register.html
src/utils/: UrlUtils.cpp  UrlUtils.h
tests/: CMakeLists.txt  test_login.cpp
